# Linux_C_Applications

10_IPC/: 1_Pipe_Test.c  IPC_test
11_Thread/: 10_Multi_Thread_Test.c  11_pthread_once_Test.c  1_pthread_create_test.c  2_pthread_exit_Test.c  3_pthread_join_test.c  4_phread_cancel_test.c  5_pthread_setcanselstate_Test.c  6_pthread_testcancel_Test.c  7_pthread_detach_Test.c  8_pthread_cleanup_push_test.c  9_pthread_cleanup_pop_test.c  CMakeLists.txt  PthreadCreate_Test  PthreadTestCancel_Test  phread_cleanup_push  pthread_cancel_Test  pthread_cleanup_pop  pthread_detach_test  pthread_join_test
11_Thread/Reserved/: PthreadCancelState_Test
11_Thread/build_ARM/: CMakeCache.txt  Makefile  cmake_install.cmake
11_Thread/src/: 10_Multi_Thread_Test.c  11_pthread_once_Test.c  2_pthread_exit_Test.c  3_pthread_join_test.c  6_pthread_testcancel_Test.c  7_pthread_detach_Test.c  8_pthread_cleanup_push_test.c  9_pthread_cleanup_pop_test.c  CMakeLists.txt
12_ThreadSync/: 1_competition.c  2_Mutex.c  3_MutexTryLock.c  4_MutexDestroy.c  5_ConditionVariable.c  6_Conditon_Var_BroadcastAndWait.c  7_SpinLock.c  8_RWLock.c  CMakeLists.txt  Cond_Wait_Signal_test  Condition_Var  competition_Test
12_ThreadSync/Reserved/: MutexDestroy  RWLock_Test  SpinLock
12_ThreadSync/build_ARM/: CMakeCache.txt  Makefile  cmake_install.cmake
12_ThreadSync/src/: 3_MutexTryLock.c  5_ConditionVariable.c  8_RWLock.c  CMakeLists.txt
13_Deep_Learnning_IO/: 1_mmap_munmap_test.c  2_flock_Test.c  3_flock_test.c  4_fcntl_test.c  CMakeLists.txt  fcntl_test  flock_Test_1  mmap_munmap_Test
13_Deep_Learnning_IO/Reserved/: flock_Test_2
13_Deep_Learnning_IO/build_ARM/: CMakeCache.txt  Makefile  cmake_install.cmake
14_SocketStudy/: CMakeLists.txt
15_LED/: CMakeLists.txt
16_GPIO/: CMakeLists.txt
17_Input/: CMakeLists.txt
18_tslib/: CMakeLists.txt
19_FrameBuffer/: CMakeLists.txt
1_file_operations/: 2_write_test.c  CMakeLists.txt  read
1_file_operations/src/: 1_read_test.c  CMakeLists.txt
20_PWM/: CMakeLists.txt
20_PWM/build_ARM/: CMakeCache.txt  Makefile  cmake_install.cmake
20_PWM/build_ARM/src/: Makefile  cmake_install.cmake
20_PWM/src/: 1_PWM.c  CMakeLists.txt
21_V4L2/: CMakeLists.txt
22_UART/: CMakeLists.txt
23_WatchDog/: CMakeLists.txt
24_CANBUS/: CMakeLists.txt
3_Deep_Study_fileOperations/: 1_ErrorNumber.c  3_flags_test.c  4_OAPPEND_Test.c  5_Multi_openFile.c  6_dup_dup2_Func_Test.c  7_truncate_func_test.c  Truncate_test  VoidFile  dup_Func_Test  ftrnucate_test  test.txt
3_Deep_Study_fileOperations/src/: 2_void_file.c  8_fcntl_func_test.c  CMakeLists.txt
4_stdIO_Files/: 1_C_lib_fileOperations.c  2_feof_ferror_func_Test.c  3_Printf_test.c  4_stdIO_Files.code-workspace  6_sync_test.c  7_direct_IO_Test.c  8_StdioBuffer.c  9_fd_file_transfer.c  CMakeLists.txt  FILE_fd_Transfer_Test  Line_buffer_Test  dprintf_test  feof_ferror_Test  fprintf_Test  scanf_Test  setvbuf_Test  sprintf_Test
4_stdIO_Files/src/: 10_fileno_func_Test.c  4_fprintf_test.c  5_scanf_test.c  CMakeLists.txt
5_statOf_File/: 10_utimensat_Func_Test.c  13_REadlink_Func_Test.c  14_mkdir_Test.c  5_statOf_File.code-workspace  6_chmod_Func_Test.c  7_utime_Func_Test.c  8_utumes_Func_test.c  9_futimens_Tesst.c  CMakeLists.txt  ReadLink_Test  fstat_func_test  futime_TEST_2  futime_TEST_3  lstat_Test  utimes_Fun_Test
5_statOf_File/src/: 11_Link_Func_Test.c  12_symLink_func_Test.c  1_stateFunc_Test.c  2_fstat_Test.c  3_lstat_Func_Test.c  4_chown_Func_Test.c  5_access_Func_Test.c  CMakeLists.txt
6_stringIO/: 10_strcpy_Test.c  12_strcmp_test.c  13_strchr_test.c  14_strstr_Test.c  15_StrToInt.c  1_puts_Test.c  2_putchar_Test.c  6_getchar_Test.c  7_fgets_test.c  9_strcat_Test.c  CMakeLists.txt  StrToInt_Test  fgets_Test  fputc_Test  puts_Test  strcat_test  strchr_test  strcpy_test
6_stringIO/src/: 11_memset_test.c  3_fputc_Test.c  4_fputs_Test.c  5_gets_Test.c  8_fgetc_Test.c  CMakeLists.txt
7_Kernel_Message/: 10_mktime_Test.c  11_asctime_tets.c  15_rand_Test.c  18_usleep_us_test.c  1_uname_test.c  20_nanosleep_test.c  2_sysinfo_test.c  3_gethostname_Test.c  5_time_test.c  6_gettimeofday_Test.c  9_gmtime_test.c  CMakeLists.txt  asctime_TEST  ctime_r_test  gethostname_Test  gettimeofday_test  localtime_test  nanosleep_test  rand_Test  sleep_test  strftime_Test  usleep_test
7_Kernel_Message/src/: 12_strftime_Test.c  13_times_test.c  14_clock_test.c  16_srand_Test.c  17_sleep.c  4_sysconf_Test.c  7_ctime_Test.c  8_localtime_Test.c  CMakeLists.txt
8_signal/: 1_signal_test.c  2_sigaction_test.c  3_kill_func_test.c  4_raise_Test.c  5_alarm_func_test.c  6_pause_Func_Test.c  7_sigprocmask_test.c  8_sigqueue_Reicive_Test.c  8_sigqueue_Send_Test.c  9_abort_Test.c  CMakeLists.txt  signal_test  sigqueue_RX
8_signal/src/: 1_signal_test.c  2_sigaction_test.c  3_kill_func_test.c  4_raise_Test.c  5_alarm_func_test.c  6_pause_Func_Test.c  7_sigprocmask_test.c  8_sigqueue_Receive_Test.c  8_sigqueue_Send_Test.c  9_abort_Test.c  CMakeLists.txt
9_Proccessor_study/: 10_fork_test.c  11_sharing_files.c  12_return_parent_child.c  13_wait_test.c  14_waitpid_Test.c  15_SIGCHILD.c  16_orphan_Proc_test.c  17_zomble_test.c  18_execve_test.c  19_newProgram.c  1_getpid_Test.c  20_execl_Test.c  21_execlp_Test.c  22_execle_Test.c  23_execv_Test.c  24_execvp_Test.c  25_execvpe_Test.c  26_system_test.c  27_vfork_Test.c  28_getpgrp_test.c  29_setpgrp_Test.c  2__exit_test.c  30_setpgid_tset.c  31_getsid_Test.c  32_PID_SID_PGID_.c  33_setsid_Test.c  34_Daemon_Test.c  3_exit_test.c  4_atexit_test.c  5_environ_test.c  6_main_test.c  7_getenv_test.c  8_putenv_test.c  9_setenv_test.c  CMakeLists.txt  SharingFiles_Test  environ_test  fork_test  getpgrp_Test  putenv_test  (+1 more)
9_Proccessor_study/src/: 11_sharing_files.c  14_waitpid_Test.c  15_SIGCHILD.c  16_orphan_Proc_test.c  19_newProgram.c  1_getpid_Test.c  20_execl_Test.c  22_execle_Test.c  24_execvp_Test.c  2__exit_test.c  31_getsid_Test.c  32_PID_SID_PGID.c  33_setsid_Test.c  34_Daemon_Test.c  3_exit_test.c  4_atexit_test.c  5_environ_test.c  6_main_test.c  8_putenv_test.c  9_setenv_test.c  CMakeLists.txt
(+194 files in other folders)
