set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_CreateThread 1_pthread_create_test.c)
add_executable(2_ExitThread 2_pthread_exit_Test.c)
add_executable(3_pthread_joinFunc 3_pthread_join_test.c)
add_executable(4_thread_cancel 4_phread_cancel_test.c)
add_executable(5_pthread_setcancelstateFunc 5_pthread_setcancelstate_Test.c)
add_executable(6_pthread_testcancelFunc 6_pthread_testcancel_Test.c)
add_executable(7_pthread_detach 7_pthread_detach_Test.c)
add_executable(8_pthread_cleanup_push 8_pthread_cleanup_push_test.c)
add_executable(9_pthread_cleanup_pop 9_pthread_cleanup_pop_test.c)
add_executable(10_MultiThread 10_Multi_Thread_Test.c)
add_executable(11_pthreadOnceFunc 11_pthread_once_Test.c)
