set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_Compatition 1_competition.c)
add_executable(2_Mutex 2_Mutex.c)
add_executable(3_MutexTryLock 3_MutexTryLock.c)
add_executable(4_MutexDestroyFunc 4_MutexDestroy.c)
add_executable(5_ConditionVaraiable 5_ConditionVariable.c)
add_executable(6_BroadcastAndWait 6_Conditon_Var_BroadcastAndWait.c)
add_executable(7_SpinLock 7_SpinLock.c)
add_executable(8_RWLock 8_RWLock.c)
