#include_directories(${PROJECT_SOURCE_DIR}/libhello)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_read 1_read_test.c)
add_executable(2_write 2_write_test.c)
add_executable(3_ErrorNumber 3_ErrorNumber.c)
add_executable(4_Void_File 4_void_file.c)
#target_link_libraries(hello libhello)
