set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_ErrorNumber 1_ErrorNumber.c)
add_executable(2_VoidFile 2_void_file.c)
add_executable(3_Flags 3_flags_test.c)
add_executable(4_OAPPEND 4_OAPPEND_Test.c)
add_executable(5_MultiOpenfile 5_Multi_openFile.c)
add_executable(6_dup_dup2_Func 6_dup_dup2_Func_Test.c)
add_executable(7_truncate_Func 7_truncate_func_test.c)
add_executable(8_fcntl_Func 8_fcntl_func_test.c)
