set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_CLib_fileOperations 1_C_lib_fileOperations.c)
add_executable(2_feof_ferror_Func 2_feof_ferror_func_Test.c)
add_executable(3_Printf 3_Printf_test.c)
add_executable(4_fprintf 4_fprintf_test.c)
add_executable(5_scanf 5_scanf_test.c)
add_executable(6_sync 6_sync_test.c)
add_executable(7_direct_IO 7_direct_IO_Test.c)
add_executable(8_StdioBuffer 8_StdioBuffer.c)
add_executable(9_fd_file 9_fd_file_transfer.c)
add_executable(10_fileno_Func 10_fileno_func_Test.c)
