set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_StateFunc 1_stateFunc_Test.c)
add_executable(2_fstatFunc 2_fstat_Test.c)
add_executable(3_lstatFunc 3_lstat_Func_Test.c)
add_executable(4_chownFunc 4_chown_Func_Test.c)
add_executable(5_AccessFunc 5_access_Func_Test.c)
add_executable(6_chmod 6_chmod_Func_Test.c)
add_executable(7_utime_Func 7_utime_Func_Test.c)
add_executable(8_utimes_Func 8_utimes_Func_test.c)
add_executable(9_utimens_Func 9_futimens_Test.c)
add_executable(10_utimensat 10_utimensat_Func_Test.c)
add_executable(11_LinkFunc 11_Link_Func_Test.c)
add_executable(12_symLinkFunc 12_symLink_func_Test.c)
add_executable(13_ReadLinkFunc 13_Readlink_Func_Test.c)
add_executable(14_mkdirFunc 14_mkdir_Test.c)
