set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_puts 1_puts_Test.c)
add_executable(2_putchar 2_putchar_Test.c)
add_executable(3_fputc 3_fputc_Test.c)
add_executable(4_fputs 4_fputs_Test.c)
add_executable(5_gets 5_gets_Test.c)
add_executable(6_getchar 6_getchar_Test.c)
add_executable(7_fgets 7_fgets_test.c)
add_executable(8_fgetc 8_fgetc_Test.c)
add_executable(9_strcat 9_strcat_Test.c)
add_executable(10_strcpy 10_strcpy_Test.c)
add_executable(11_memset 11_memset_test.c)
add_executable(12_strcmp 12_strcmp_test.c)
add_executable(13_strchr 13_strchr_Test.c)
add_executable(14_strstr 14_strstr_Test.c)
add_executable(15_StrToInt 15_StrToInt.c)
