set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_uname 1_uname_test.c)
add_executable(2_sysinfo 2_sysinfo_test.c)
add_executable(3_gethostname 3_gethostname_Test.c)
add_executable(4_sysconf 4_sysconf_Test.c)
add_executable(5_time 5_time_test.c)
add_executable(6_GetTimeOfDay 6_gettimeofday_Test.c)
add_executable(7_ctime 7_ctime_Test.c)
add_executable(8_localtime 8_localtime_Test.c)
add_executable(9_gmtime 9_gmtime_Test.c)
add_executable(10_mktime 10_mktime_Test.c)
add_executable(11_asctimeFunc 11_asctime_Test.c)
add_executable(12_strftime 12_strftime_Test.c)
add_executable(13_times 13_times_test.c)
add_executable(14_clock 14_clock_test.c)
add_executable(15_randFunc 15_rand_Test.c)
add_executable(16_srand 16_srand_Test.c)
add_executable(17_sleepFunc 17_sleep.c)
add_executable(18_usleep_us 18_usleep_us_test.c)
add_executable(20_nanosleep 20_nanosleep_test.c)




