set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_signal 1_signal_test.c)
add_executable(2_sigaction 2_sigaction_test.c)
add_executable(3_killFunc 3_kill_func_test.c)
add_executable(4_raiseFunc 4_raise_Test.c)
add_executable(5_alarm 5_alarm_func_test.c)
add_executable(6_pauseFunc 6_pause_Func_Test.c)
add_executable(7_sigprocmask 7_sigprocmask_test.c)
add_executable(8_sigqueueRX 8_sigqueue_Receive_Test.c)
add_executable(8_sigqueueTX 8_sigqueue_Send_Test.c)
add_executable(9_abortFunc 9_abort_Test.c)
