set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(1_GetPID 1_getpid_Test.c)
add_executable(2_exit 2__exit_test.c)
add_executable(3_exit 3_exit_test.c)
add_executable(4_atexit 4_atexit_test.c)
add_executable(5_environ 5_environ_test.c)
add_executable(6_main 6_main_test.c)
add_executable(7_getenvFunc 7_getenv_test.c)
add_executable(8_putenvFunc 8_putenv_test.c)
add_executable(9_setenvFunc 9_setenv_test.c)
add_executable(10_forkFunc 10_fork_test.c)
add_executable(11_ShareFile 11_sharing_files.c)
add_executable(12_ReturnParentChild 12_return_parent_child.c)
add_executable(13_WaitFunc 13_wait_test.c)
add_executable(14_WaitPID_Func 14_waitpid_Test.c)
add_executable(15_SIGCHILD 15_SIGCHILD.c)
add_executable(16_OrphanProcessor 16_orphan_Proc_test.c)
add_executable(17_ZombieProcessor 17_zomble_test.c)
add_executable(18_execveFunc 18_execve_test.c)
add_executable(19_newProgram 19_newProgram.c)
add_executable(20_excelFunc 20_execl_Test.c)
add_executable(21_execlpFunc 21_execlp_Test.c)
add_executable(22_execleFunc 22_execle_Test.c)
add_executable(23_execvFunc 23_execv_Test.c)
add_executable(24_execvpFunc 24_execvp_Test.c)
add_executable(25_execvpeFunc 25_execvpe_Test.c)
add_executable(26_system 26_system_test.c)
add_executable(27_vforkFunc 27_vfork_Test.c)
add_executable(28_GetProcessorGroup 28_getpgrp_test.c)
add_executable(29_SetProcessorGroup 29_setpgrp_Test.c)
add_executable(30_SetProcessorGroupID 30_setpgid_tset.c)
add_executable(31_GetSID 31_getsid_Test.c)
add_executable(32_PID_SID_PGID 32_PID_SID_PGID.c)
add_executable(33_SetSID 33_setsid_Test.c)
add_executable(34_DaemonProcessor 34_Daemon_Test.c)

